style.css
:root {
    --ff-sans: "Outfit", sans-serif;

    --fw-normal: 400;
    --fw-bold: 700;

    --fs-400: 0.9375rem;
    --fs-700: 1.4rem;

    --clr-neutral-400: hsl(220, 15%, 55%);
    --clr-neutral-700: hsl(218, 44%, 22%);

    --clr-white: hsl(0, 0%, 100%);
    --clr-lightGray: hsl(212, 45%, 89%); 
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
}

html {
    font-family: var(--ff-sans);
    font-weight: var(--fw-normal);
    color: var(--clr-neutral-400);
    height: 100%;
}

body {
    background-color: var(--clr-lightGray);
    margin: 0;
    height: 100%;
}

img {
    max-width: 100%;
    display: block;
    border-radius: 1rem;
}

h1 {
    margin: 1.6rem 1rem 1rem 1rem;
    font-weight: var(--fw-bold);
    color: var(--clr-neutral-700);
    font-size: var(--fs-700);
}

p {
    margin: 0 2rem 1.5rem 2rem;
    font-size: var(--fs-400);
}

main {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 95%;
}

footer {
    text-align: center;
}

.wrapper {
    border-radius: 1.5rem;
    background-color: var(--clr-white);
    text-align: center;
    max-width: 350px;
    padding: 1rem;    
}

